--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,4 +1,32 @@
 .home {
-    background-color: green;
+    position: relative;
     margin-top: 60px;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    &_title {
+        font-size: 3rem;
+        width: 250px;
+        text-align: center;
+    }
+
+    &_description {
+        font-size: 1.8rem;
+        font-style: italic;
+    }
+
+
+    .house-img {
+        z-index: -1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 600px;
+        object-fit: cover;
+        opacity: 0.5;
+    }
 }
