--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -9,8 +9,11 @@
 
     &_title {
         font-size: 3rem;
-        width: 250px;
+        width: 300px;
         text-align: center;
+        text-transform: uppercase;
+        font-weight: bold;
+        margin-bottom: 60px;
     }
 
     &_description {
