--- a/src/components/roomlist/roomlist.scss
+++ b/src/components/roomlist/roomlist.scss
@@ -1,3 +1,27 @@
 .roomlist {
     background-color: blue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    h2 {
+        margin-top: 20px;
+        font-size: 2rem;
+    }
+
+    .wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+
+        .room-card {
+            border: 1px solid red;
+            width: 200px;
+            height: 300px;
+            margin: 25px 50px;
+        }
+    }
+
 }
